syntax = "proto3";
package api.grpc;
option go_package = "memento/proto";

message AddUserRequest{
 string name = 1;
  string password = 2;
}

message AddUserResponse{
  string error = 1;
}

service Memento {
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
}